// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<button
  className="button-style"
  data-testid="button"
  onClick={[Function]}
>
  HI 
  Save
</button>
`;

exports[`matches snapshot 2 1`] = `
<button
  className="button-style"
  data-testid="button"
  onClick={[Function]}
>
  HI 
  clcik me please
</button>
`;
